--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <!--Alex-->
 <!--Andrea-->
 <!--Shasha-->
+<h1 class="sasha">Lorem ipsum dolor sit amet.</h1>
 <script src="js/script.js"></script>
 </body>
 </html>
